# ventauri

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  base.py  registry.py
agents/competitor_analysis_agent/: __init__.py  agent.py  harness.yaml  rules.md
agents/compliance_agent/: __init__.py  agent.py  harness.yaml  rules.md
agents/finance_agent/: __init__.py
agents/growth_agent/: __init__.py
agents/harness/: __init__.py  executor.py  (+3 more)
api/: __init__.py  chat_service.py  database.py  jobs_store.py  main.py  models_db.py  paths.py  repo.py  run_service.py  schemas.py
cli/: __init__.py  main.py
configs/: default.yaml
docs/: ARCHITECTURE.md
memory/: __init__.py  agent_memory.py  episodic_store.py  session_store.py  vector_store.py
orchestrator/: __init__.py  chat_router.py  llm.py  models.py  prompt_loader.py  router.py  runner.py  settings.py  telemetry.py
prompts/: chat_router_agent.md  competitor_analysis_agent.md  compliance_agent.md  idea_agent.md  market_research_agent.md  product_development_agent.md  research_agent.md  strategy_agent.md
skills/: __init__.py
static/: app.css  app.js
templates/: agents.html  base.html  dashboard.html  not_found.html  run.html  session_detail.html  sessions.html
tests/: test_chat_api.py  test_chat_router.py  test_naming.py  test_pipeline_demo.py  test_resolve_pipeline.py  test_router.py  test_telemetry_api.py  test_vector_store.py  test_venture_intelligence.py
workflows/: __init__.py  idea_to_strategy.py  venture_intelligence.py
(+37 files in other folders)
